# geovars

./: .gitignore  README.md  pyproject.toml
geovars/: __init__.py
geovars/_calculator/: __init__.py  clustering.py  core.py  database.py  worker.py
geovars/_common/: __init__.py
geovars/_io/: __init__.py
geovars/_sql/: __init__.py  bus_distance.sql  bus_stop_count.sql  car_registration.sql  coast_distance.sql  coordinate.sql  distance_to_airport.sql  distance_to_bus_stop.sql  distance_to_coast.sql  distance_to_mdl.sql  distance_to_port.sql  distance_to_railstation.sql  distance_to_railway.sql  distance_to_river.sql  distance_to_road.sql  elevation.sql  emission.sql  landcover.sql  ndvi_statistics.sql  road_llw.sql  sgis_statistics.sql
scripts/: usecase.py
