[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "geovars"
version = "0.1.0"
description = "Python library for calculating geospatial variables with DuckDB Spatial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.5.3",
    "jinja2",
    "pandas",
    "tqdm",
]

[tool.uv.build-backend]
module-name = "geovars"
module-root = ""
